Overflow fixing

--- a/_optimized_gulp_sass/sass/header.sass
+++ b/_optimized_gulp_sass/sass/header.sass
@@ -1007,7 +1007,7 @@ a
 							font-size: 0.6em
 							text-align: left
 							line-height: 22px
-							width: 35vw
+							width: 30vw
 							margin: 0 7px
 							box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.25)
 							.faq-q
@@ -1661,6 +1661,7 @@ a
 		padding: 25px
 		padding-top: 50px
 		box-sizing: border-box
+		overflow: hidden
 		.communication-content-page
 			display: flex
 			flex-direction: column
@@ -2347,6 +2348,7 @@ a
 	left: 0
 	width: 100%
 	height: 90%
+	overflow: hidden;
 	display: none
 	.slide-wrap
 		width: 100%
